# dIdVsuperc

./: CMakeLists.txt  Makefile  README  common.h  fit.c  globals.c  init.c  main.c  misc.c  plot.c  splot.c  ui.c
data/: MgB2_01.dat.fit  MgB2_02.dat.fit  MgB2_03.dat.fit  sample.dat.fit
misc/Mathematica/: DOS_2band_forfit.nb  README  SIN_fit.nb
plots/examples/: MgB2_01.eps  MgB2_01.ps  MgB2_02.eps  MgB2_02.ps  MgB2_03.eps  MgB2_03.ps  example-fit.gpi
plots/examples/doubleGap/: MgB2_01.eps  MgB2_01.ps
plots/examples/doubleGap/doubleGamma/: MgB2_01.eps  MgB2_01.ps
plots/examples/doubleGap/doubleGamma/no_constraints_on_alpha1/: MgB2_01.eps  MgB2_01.ps
share/doc/ttf-freefont/: changelog.Debian
src/: common.h  constraints.c  fit.c  functions.c  globals.c  init.c  main.c  misc.c  plot.c  splot.c  ui.c
util/: MgB2_03.txt  sigma.pl
util/gnuplot/: Jarque-Bera.gpi  MgB2_01.eps  MgB2_01.ps  MgB2_02.eps  MgB2_02.ps  MgB2_03.eps  MgB2_03.ps  common.gpi  example-fit.gpi  plot-all.pl  plot.gpi  sample.eps  sample.ps
util/sigma/: Jarque-Bera.pl  MgB2_01.txt  MgB2_02.txt
